Fix for horizontal scrolling in Firefox

--- a/wp-content/themes/largo-child/css/style.css
+++ b/wp-content/themes/largo-child/css/style.css
@@ -138,13 +138,13 @@ p.wpsc_email_address_p input,
 #site-header {
   margin: 0 auto;
 }
-@supports ( left: -2%) and ( width: 100vw ) {
+@supports ( left: -2vw) and ( width: 100vw ) {
   #site-header,
   #main-nav,
   #secondary-nav {
     width: 100vw;
     position: relative;
-    left: -2%;
+    left: -2vw;
   }
   #topics-bar,
   .navbar-inner .container {
