--- a/wp-content/themes/largo-child/less/header.less
+++ b/wp-content/themes/largo-child/less/header.less
@@ -4,13 +4,13 @@
   margin: 0 auto;
 }
 
-@supports ( left: -2%) and ( width: 100vw ) {
+@supports ( left: -2vw) and ( width: 100vw ) {
   #site-header,
   #main-nav,
   #secondary-nav {
     width: 100vw;
     position: relative;
-    left: -2%;
+    left: -2vw;
   }
 
   #topics-bar,
